test: remove not used things and aply lint