@@ -11,7 +11,6 @@ import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.entry;
 import static org.junit.jupiter.api.Assumptions.assumeTrue;
 
-import io.camunda.tasklist.data.conditionals.ElasticSearchCondition;
 import io.camunda.tasklist.property.TasklistProperties;
 import io.camunda.tasklist.schema.IndexMapping;
 import io.camunda.tasklist.schema.IndexMapping.IndexMappingProperty;
@@ -34,9 +33,7 @@ import java.util.Set;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.context.annotation.Conditional;
 
-@Conditional(ElasticSearchCondition.class)
 public class ElasticSearchSchemaManagementIT extends TasklistZeebeIntegrationTest {
 
   private static final String ORIGINAL_SCHEMA_PATH = "/tasklist-test.json";
@@ -148,21 +145,22 @@ public class ElasticSearchSchemaManagementIT extends TasklistZeebeIntegrationTes
 
     restoreOriginalSchemaContent();
 
-    final IndexMapping expectedIndexMapping = new IndexMapping()
-        .setIndexName(indexName)
-        .setDynamic("strict")
-        .setMetaProperties(Collections.emptyMap())
-        .setProperties(
-            Set.of(
-                new IndexMappingProperty()
-                    .setName("prop2")
-                    .setTypeDefinition(Map.of("type", "keyword")),
-                new IndexMappingProperty()
-                    .setName("prop1")
-                    .setTypeDefinition(Map.of("type", "keyword")),
-                new IndexMappingProperty()
-                    .setName("prop0")
-                    .setTypeDefinition(Map.of("type", "keyword"))));
+    final IndexMapping expectedIndexMapping =
+        new IndexMapping()
+            .setIndexName(indexName)
+            .setDynamic("strict")
+            .setMetaProperties(Collections.emptyMap())
+            .setProperties(
+                Set.of(
+                    new IndexMappingProperty()
+                        .setName("prop2")
+                        .setTypeDefinition(Map.of("type", "keyword")),
+                    new IndexMappingProperty()
+                        .setName("prop1")
+                        .setTypeDefinition(Map.of("type", "keyword")),
+                    new IndexMappingProperty()
+                        .setName("prop0")
+                        .setTypeDefinition(Map.of("type", "keyword"))));
 
     assertThat(indexMappings).contains(entry(indexName, expectedIndexMapping));
   }
